# PPVIS-LR2

./: CMakeLists.txt
src/: main.cpp
src/controllers/: AnswerControllers.h  QuestionControllers.h  TestControllers.h  UserControllers.h
src/models/: AnswerModels.h  QuestionModels.h  TestModels.h  UserModels.h
src/views/: UserChooserView.h
ui/: authenticate.ui  introduce.ui  test_builder.ui  test_compiler.ui  test_editor.ui  test_executor.ui  test_resultator.ui  test_taker.ui  text_answer_editor.ui  true_false_question_editor.ui  user_chooser.ui
